create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2053,43 +2053,43 @@ body {
 .cid-rdnJfzgMjx H2 {
   color: #ff8f00;
 }
-.cid-rzLdkWlRDM {
-  padding-top: 45px;
-  padding-bottom: 30px;
-  background-color: #2e2e2e;
+.cid-rOzRo0ebEc {
+  padding-top: 30px;
+  padding-bottom: 15px;
+  background-color: #3c4043;
 }
 @media (max-width: 767px) {
-  .cid-rzLdkWlRDM .content {
+  .cid-rOzRo0ebEc .content {
     text-align: center;
   }
-  .cid-rzLdkWlRDM .content > div:not(:last-child) {
+  .cid-rOzRo0ebEc .content > div:not(:last-child) {
     margin-bottom: 2rem;
   }
 }
 @media (max-width: 767px) {
-  .cid-rzLdkWlRDM .media-wrap {
+  .cid-rOzRo0ebEc .media-wrap {
     margin-bottom: 1rem;
   }
 }
-.cid-rzLdkWlRDM .media-wrap .mbr-iconfont-logo {
+.cid-rOzRo0ebEc .media-wrap .mbr-iconfont-logo {
   font-size: 7.5rem;
   color: #f36;
 }
-.cid-rzLdkWlRDM .media-wrap img {
+.cid-rOzRo0ebEc .media-wrap img {
   height: 6rem;
 }
 @media (max-width: 767px) {
-  .cid-rzLdkWlRDM .footer-lower .copyright {
+  .cid-rOzRo0ebEc .footer-lower .copyright {
     margin-bottom: 1rem;
     text-align: center;
   }
 }
-.cid-rzLdkWlRDM .footer-lower hr {
+.cid-rOzRo0ebEc .footer-lower hr {
   margin: 1rem 0;
   border-color: #fff;
   opacity: .05;
 }
-.cid-rzLdkWlRDM .footer-lower .social-list {
+.cid-rOzRo0ebEc .footer-lower .social-list {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
@@ -2099,29 +2099,29 @@ body {
   -webkit-justify-content: flex-end;
   justify-content: flex-end;
 }
-.cid-rzLdkWlRDM .footer-lower .social-list .mbr-iconfont-social {
+.cid-rOzRo0ebEc .footer-lower .social-list .mbr-iconfont-social {
   font-size: 1.3rem;
   color: #fff;
 }
-.cid-rzLdkWlRDM .footer-lower .social-list .soc-item {
+.cid-rOzRo0ebEc .footer-lower .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-rzLdkWlRDM .footer-lower .social-list a {
+.cid-rOzRo0ebEc .footer-lower .social-list a {
   margin: 0;
   opacity: .5;
   -webkit-transition: .2s linear;
   transition: .2s linear;
 }
-.cid-rzLdkWlRDM .footer-lower .social-list a:hover {
+.cid-rOzRo0ebEc .footer-lower .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-rzLdkWlRDM .footer-lower .social-list {
+  .cid-rOzRo0ebEc .footer-lower .social-list {
     -webkit-justify-content: center;
     justify-content: center;
   }
 }
-.cid-rzLdkWlRDM P {
+.cid-rOzRo0ebEc P {
   color: #ffffff;
   text-align: left;
 }
@@ -2522,43 +2522,43 @@ body {
 .cid-rcT743DS9y .dropdown-item:hover {
   color: #00a6ed !important;
 }
-.cid-rzLdNSXNWz {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-color: #2e2e2e;
+.cid-rOzRTgYgAR {
+  padding-top: 30px;
+  padding-bottom: 15px;
+  background-color: #3c4043;
 }
 @media (max-width: 767px) {
-  .cid-rzLdNSXNWz .content {
+  .cid-rOzRTgYgAR .content {
     text-align: center;
   }
-  .cid-rzLdNSXNWz .content > div:not(:last-child) {
+  .cid-rOzRTgYgAR .content > div:not(:last-child) {
     margin-bottom: 2rem;
   }
 }
 @media (max-width: 767px) {
-  .cid-rzLdNSXNWz .media-wrap {
+  .cid-rOzRTgYgAR .media-wrap {
     margin-bottom: 1rem;
   }
 }
-.cid-rzLdNSXNWz .media-wrap .mbr-iconfont-logo {
+.cid-rOzRTgYgAR .media-wrap .mbr-iconfont-logo {
   font-size: 7.5rem;
   color: #f36;
 }
-.cid-rzLdNSXNWz .media-wrap img {
+.cid-rOzRTgYgAR .media-wrap img {
   height: 6rem;
 }
 @media (max-width: 767px) {
-  .cid-rzLdNSXNWz .footer-lower .copyright {
+  .cid-rOzRTgYgAR .footer-lower .copyright {
     margin-bottom: 1rem;
     text-align: center;
   }
 }
-.cid-rzLdNSXNWz .footer-lower hr {
+.cid-rOzRTgYgAR .footer-lower hr {
   margin: 1rem 0;
   border-color: #fff;
   opacity: .05;
 }
-.cid-rzLdNSXNWz .footer-lower .social-list {
+.cid-rOzRTgYgAR .footer-lower .social-list {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
@@ -2568,35 +2568,35 @@ body {
   -webkit-justify-content: flex-end;
   justify-content: flex-end;
 }
-.cid-rzLdNSXNWz .footer-lower .social-list .mbr-iconfont-social {
+.cid-rOzRTgYgAR .footer-lower .social-list .mbr-iconfont-social {
   font-size: 1.3rem;
   color: #fff;
 }
-.cid-rzLdNSXNWz .footer-lower .social-list .soc-item {
+.cid-rOzRTgYgAR .footer-lower .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-rzLdNSXNWz .footer-lower .social-list a {
+.cid-rOzRTgYgAR .footer-lower .social-list a {
   margin: 0;
   opacity: .5;
   -webkit-transition: .2s linear;
   transition: .2s linear;
 }
-.cid-rzLdNSXNWz .footer-lower .social-list a:hover {
+.cid-rOzRTgYgAR .footer-lower .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-rzLdNSXNWz .footer-lower .social-list {
+  .cid-rOzRTgYgAR .footer-lower .social-list {
     -webkit-justify-content: center;
     justify-content: center;
   }
 }
-.cid-rzLdNSXNWz P {
+.cid-rOzRTgYgAR P {
   color: #ffffff;
   text-align: left;
 }
 .cid-rHftk78s9t {
-  padding-top: 15px;
-  padding-bottom: 15px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   background-color: #2e2e2e;
 }
 .cid-reLWkS5HzE .navbar {
@@ -3279,43 +3279,43 @@ body {
 .cid-rcYfAK5cda SPAN {
   color: #ffffff;
 }
-.cid-rzLdqWxDi8 {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-color: #2e2e2e;
+.cid-rOzRveZcLc {
+  padding-top: 30px;
+  padding-bottom: 15px;
+  background-color: #3c4043;
 }
 @media (max-width: 767px) {
-  .cid-rzLdqWxDi8 .content {
+  .cid-rOzRveZcLc .content {
     text-align: center;
   }
-  .cid-rzLdqWxDi8 .content > div:not(:last-child) {
+  .cid-rOzRveZcLc .content > div:not(:last-child) {
     margin-bottom: 2rem;
   }
 }
 @media (max-width: 767px) {
-  .cid-rzLdqWxDi8 .media-wrap {
+  .cid-rOzRveZcLc .media-wrap {
     margin-bottom: 1rem;
   }
 }
-.cid-rzLdqWxDi8 .media-wrap .mbr-iconfont-logo {
+.cid-rOzRveZcLc .media-wrap .mbr-iconfont-logo {
   font-size: 7.5rem;
   color: #f36;
 }
-.cid-rzLdqWxDi8 .media-wrap img {
+.cid-rOzRveZcLc .media-wrap img {
   height: 6rem;
 }
 @media (max-width: 767px) {
-  .cid-rzLdqWxDi8 .footer-lower .copyright {
+  .cid-rOzRveZcLc .footer-lower .copyright {
     margin-bottom: 1rem;
     text-align: center;
   }
 }
-.cid-rzLdqWxDi8 .footer-lower hr {
+.cid-rOzRveZcLc .footer-lower hr {
   margin: 1rem 0;
   border-color: #fff;
   opacity: .05;
 }
-.cid-rzLdqWxDi8 .footer-lower .social-list {
+.cid-rOzRveZcLc .footer-lower .social-list {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
@@ -3325,29 +3325,29 @@ body {
   -webkit-justify-content: flex-end;
   justify-content: flex-end;
 }
-.cid-rzLdqWxDi8 .footer-lower .social-list .mbr-iconfont-social {
+.cid-rOzRveZcLc .footer-lower .social-list .mbr-iconfont-social {
   font-size: 1.3rem;
   color: #fff;
 }
-.cid-rzLdqWxDi8 .footer-lower .social-list .soc-item {
+.cid-rOzRveZcLc .footer-lower .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-rzLdqWxDi8 .footer-lower .social-list a {
+.cid-rOzRveZcLc .footer-lower .social-list a {
   margin: 0;
   opacity: .5;
   -webkit-transition: .2s linear;
   transition: .2s linear;
 }
-.cid-rzLdqWxDi8 .footer-lower .social-list a:hover {
+.cid-rOzRveZcLc .footer-lower .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-rzLdqWxDi8 .footer-lower .social-list {
+  .cid-rOzRveZcLc .footer-lower .social-list {
     -webkit-justify-content: center;
     justify-content: center;
   }
 }
-.cid-rzLdqWxDi8 P {
+.cid-rOzRveZcLc P {
   color: #ffffff;
   text-align: left;
 }
@@ -3958,43 +3958,43 @@ body {
 .cid-rdlJknYqXU SPAN {
   color: #ffffff;
 }
-.cid-rzLdAOiVt5 {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-color: #2e2e2e;
+.cid-rOzRJzxSQm {
+  padding-top: 30px;
+  padding-bottom: 15px;
+  background-color: #3c4043;
 }
 @media (max-width: 767px) {
-  .cid-rzLdAOiVt5 .content {
+  .cid-rOzRJzxSQm .content {
     text-align: center;
   }
-  .cid-rzLdAOiVt5 .content > div:not(:last-child) {
+  .cid-rOzRJzxSQm .content > div:not(:last-child) {
     margin-bottom: 2rem;
   }
 }
 @media (max-width: 767px) {
-  .cid-rzLdAOiVt5 .media-wrap {
+  .cid-rOzRJzxSQm .media-wrap {
     margin-bottom: 1rem;
   }
 }
-.cid-rzLdAOiVt5 .media-wrap .mbr-iconfont-logo {
+.cid-rOzRJzxSQm .media-wrap .mbr-iconfont-logo {
   font-size: 7.5rem;
   color: #f36;
 }
-.cid-rzLdAOiVt5 .media-wrap img {
+.cid-rOzRJzxSQm .media-wrap img {
   height: 6rem;
 }
 @media (max-width: 767px) {
-  .cid-rzLdAOiVt5 .footer-lower .copyright {
+  .cid-rOzRJzxSQm .footer-lower .copyright {
     margin-bottom: 1rem;
     text-align: center;
   }
 }
-.cid-rzLdAOiVt5 .footer-lower hr {
+.cid-rOzRJzxSQm .footer-lower hr {
   margin: 1rem 0;
   border-color: #fff;
   opacity: .05;
 }
-.cid-rzLdAOiVt5 .footer-lower .social-list {
+.cid-rOzRJzxSQm .footer-lower .social-list {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
@@ -4004,29 +4004,29 @@ body {
   -webkit-justify-content: flex-end;
   justify-content: flex-end;
 }
-.cid-rzLdAOiVt5 .footer-lower .social-list .mbr-iconfont-social {
+.cid-rOzRJzxSQm .footer-lower .social-list .mbr-iconfont-social {
   font-size: 1.3rem;
   color: #fff;
 }
-.cid-rzLdAOiVt5 .footer-lower .social-list .soc-item {
+.cid-rOzRJzxSQm .footer-lower .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-rzLdAOiVt5 .footer-lower .social-list a {
+.cid-rOzRJzxSQm .footer-lower .social-list a {
   margin: 0;
   opacity: .5;
   -webkit-transition: .2s linear;
   transition: .2s linear;
 }
-.cid-rzLdAOiVt5 .footer-lower .social-list a:hover {
+.cid-rOzRJzxSQm .footer-lower .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-rzLdAOiVt5 .footer-lower .social-list {
+  .cid-rOzRJzxSQm .footer-lower .social-list {
     -webkit-justify-content: center;
     justify-content: center;
   }
 }
-.cid-rzLdAOiVt5 P {
+.cid-rOzRJzxSQm P {
   color: #ffffff;
   text-align: left;
 }
@@ -4715,43 +4715,43 @@ body {
 .cid-rf9jYV4icn SPAN {
   color: #ffffff;
 }
-.cid-rzLdwGZWTh {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-color: #2e2e2e;
+.cid-rOzREy9K73 {
+  padding-top: 30px;
+  padding-bottom: 15px;
+  background-color: #3c4043;
 }
 @media (max-width: 767px) {
-  .cid-rzLdwGZWTh .content {
+  .cid-rOzREy9K73 .content {
     text-align: center;
   }
-  .cid-rzLdwGZWTh .content > div:not(:last-child) {
+  .cid-rOzREy9K73 .content > div:not(:last-child) {
     margin-bottom: 2rem;
   }
 }
 @media (max-width: 767px) {
-  .cid-rzLdwGZWTh .media-wrap {
+  .cid-rOzREy9K73 .media-wrap {
     margin-bottom: 1rem;
   }
 }
-.cid-rzLdwGZWTh .media-wrap .mbr-iconfont-logo {
+.cid-rOzREy9K73 .media-wrap .mbr-iconfont-logo {
   font-size: 7.5rem;
   color: #f36;
 }
-.cid-rzLdwGZWTh .media-wrap img {
+.cid-rOzREy9K73 .media-wrap img {
   height: 6rem;
 }
 @media (max-width: 767px) {
-  .cid-rzLdwGZWTh .footer-lower .copyright {
+  .cid-rOzREy9K73 .footer-lower .copyright {
     margin-bottom: 1rem;
     text-align: center;
   }
 }
-.cid-rzLdwGZWTh .footer-lower hr {
+.cid-rOzREy9K73 .footer-lower hr {
   margin: 1rem 0;
   border-color: #fff;
   opacity: .05;
 }
-.cid-rzLdwGZWTh .footer-lower .social-list {
+.cid-rOzREy9K73 .footer-lower .social-list {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
@@ -4761,29 +4761,29 @@ body {
   -webkit-justify-content: flex-end;
   justify-content: flex-end;
 }
-.cid-rzLdwGZWTh .footer-lower .social-list .mbr-iconfont-social {
+.cid-rOzREy9K73 .footer-lower .social-list .mbr-iconfont-social {
   font-size: 1.3rem;
   color: #fff;
 }
-.cid-rzLdwGZWTh .footer-lower .social-list .soc-item {
+.cid-rOzREy9K73 .footer-lower .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-rzLdwGZWTh .footer-lower .social-list a {
+.cid-rOzREy9K73 .footer-lower .social-list a {
   margin: 0;
   opacity: .5;
   -webkit-transition: .2s linear;
   transition: .2s linear;
 }
-.cid-rzLdwGZWTh .footer-lower .social-list a:hover {
+.cid-rOzREy9K73 .footer-lower .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-rzLdwGZWTh .footer-lower .social-list {
+  .cid-rOzREy9K73 .footer-lower .social-list {
     -webkit-justify-content: center;
     justify-content: center;
   }
 }
-.cid-rzLdwGZWTh P {
+.cid-rOzREy9K73 P {
   color: #ffffff;
   text-align: left;
 }
@@ -7306,43 +7306,43 @@ body {
 .cid-rEAbCVi3zz .mbr-section-btn {
   text-align: center;
 }
-.cid-rEA8DDflJ9 {
+.cid-rOzROqUAYX {
   padding-top: 30px;
   padding-bottom: 15px;
-  background-color: #2e2e2e;
+  background-color: #3c4043;
 }
 @media (max-width: 767px) {
-  .cid-rEA8DDflJ9 .content {
+  .cid-rOzROqUAYX .content {
     text-align: center;
   }
-  .cid-rEA8DDflJ9 .content > div:not(:last-child) {
+  .cid-rOzROqUAYX .content > div:not(:last-child) {
     margin-bottom: 2rem;
   }
 }
 @media (max-width: 767px) {
-  .cid-rEA8DDflJ9 .media-wrap {
+  .cid-rOzROqUAYX .media-wrap {
     margin-bottom: 1rem;
   }
 }
-.cid-rEA8DDflJ9 .media-wrap .mbr-iconfont-logo {
+.cid-rOzROqUAYX .media-wrap .mbr-iconfont-logo {
   font-size: 7.5rem;
   color: #f36;
 }
-.cid-rEA8DDflJ9 .media-wrap img {
+.cid-rOzROqUAYX .media-wrap img {
   height: 6rem;
 }
 @media (max-width: 767px) {
-  .cid-rEA8DDflJ9 .footer-lower .copyright {
+  .cid-rOzROqUAYX .footer-lower .copyright {
     margin-bottom: 1rem;
     text-align: center;
   }
 }
-.cid-rEA8DDflJ9 .footer-lower hr {
+.cid-rOzROqUAYX .footer-lower hr {
   margin: 1rem 0;
   border-color: #fff;
   opacity: .05;
 }
-.cid-rEA8DDflJ9 .footer-lower .social-list {
+.cid-rOzROqUAYX .footer-lower .social-list {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
@@ -7352,29 +7352,29 @@ body {
   -webkit-justify-content: flex-end;
   justify-content: flex-end;
 }
-.cid-rEA8DDflJ9 .footer-lower .social-list .mbr-iconfont-social {
+.cid-rOzROqUAYX .footer-lower .social-list .mbr-iconfont-social {
   font-size: 1.3rem;
   color: #fff;
 }
-.cid-rEA8DDflJ9 .footer-lower .social-list .soc-item {
+.cid-rOzROqUAYX .footer-lower .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-rEA8DDflJ9 .footer-lower .social-list a {
+.cid-rOzROqUAYX .footer-lower .social-list a {
   margin: 0;
   opacity: .5;
   -webkit-transition: .2s linear;
   transition: .2s linear;
 }
-.cid-rEA8DDflJ9 .footer-lower .social-list a:hover {
+.cid-rOzROqUAYX .footer-lower .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-rEA8DDflJ9 .footer-lower .social-list {
+  .cid-rOzROqUAYX .footer-lower .social-list {
     -webkit-justify-content: center;
     justify-content: center;
   }
 }
-.cid-rEA8DDflJ9 P {
+.cid-rOzROqUAYX P {
   color: #ffffff;
   text-align: left;
 }
