create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1810,7 +1810,7 @@ body {
 .cid-rQn4We8q1R {
   padding-top: 0px;
   padding-bottom: 0px;
-  background-image: url("../../../assets/images/clab-page2-apropos-4.gif");
+  background-image: url("../../../assets/images/clab-page2-apropos-2-2000x598.jpg");
 }
 .cid-rQn4We8q1R P {
   color: #767676;
