--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -544,8 +544,8 @@ a:hover {
   color: #ffe9cc;
 }
 /* Scroll to top button*/
-#scrollToTop a {
-  border-radius: 100px;
+.scrollToTop_wraper {
+  display: none;
 }
 .form-control {
   font-family: 'Ubuntu', sans-serif;
@@ -6133,7 +6133,7 @@ section.lazy-placeholder:after {
   color: #662fbf;
 }
 .cid-rEA8DdRIFm {
-  padding-top: 30px;
+  padding-top: 60px;
   padding-bottom: 0px;
   background-color: #ffffff;
 }
